[package]
name = "tc"
version = "0.8.18"
edition = "2021"
rust-version = "1.81"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
colored = "2.0.0"
log = "0.4"
clap = { version = "4.1", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tabled = "0.10.0"
kit =  { path = "lib/kit" }
aws =  { path = "lib/aws" }
notifier =  { path = "lib/notifier" }
configurator =  { path = "lib/configurator" }
compiler =  { path = "lib/compiler" }
resolver =  { path = "lib/resolver" }
builder =  { path = "lib/builder" }
deployer =  { path = "lib/deployer" }
invoker =  { path = "lib/invoker" }
publisher =  { path = "lib/publisher" }
emulator =  { path = "lib/emulator" }
tagger =  { path = "lib/tagger" }
tester = { path = "lib/tester" }
scaffolder = { path = "lib/scaffolder" }
lister = { path = "lib/lister" }
router = { path = "lib/router" }
ci = { path = "lib/ci" }
inspector = { path = "lib/inspector" }

[dev-dependencies]
mockall = "0.12.1"

[workspace]
members = [
   "lib/kit",
   "lib/configurator",
   "lib/notifier",
   "lib/aws",
   "lib/compiler",
   "lib/resolver",
   "lib/builder",
   "lib/deployer",
   "lib/publisher",
   "lib/emulator",
   "lib/tagger",
   "lib/tester",
   "lib/scaffolder",
   "lib/lister",
   "lib/router",
   "lib/ci",
   "lib/inspector"
]

[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
strip = true
