[package]
name = "tc"
version = "0.8.99"
edition = "2024"
rust-version = "1.86"

[workspace.package]
version = "0.8.99"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
colored = "2.0.0"
log = "0.4"
clap = { version = "4.1", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tabled = "0.10.0"
openssl-sys = "0.9.107"
clap-markdown = "0.1.4"
doku = "0.21.1"
kit =  { path = "lib/kit" }
authorizer =  { path = "lib/authorizer" }
composer =  { path = "lib/composer" }
resolver =  { path = "lib/resolver" }
builder =  { path = "lib/builder" }
deployer =  { path = "lib/deployer" }
invoker =  { path = "lib/invoker" }
emulator =  { path = "lib/emulator" }
tester = { path = "lib/tester" }
differ = { path = "lib/differ" }
releaser = { path = "lib/releaser" }
snapshotter = { path = "lib/snapshotter" }
pruner = { path = "lib/pruner" }

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl-sys/vendored"]

[dev-dependencies]
mockall = "0.12.1"

[workspace]
members = [
   "lib/kit",
   "lib/composer",
   "lib/resolver",
   "lib/builder",
   "lib/deployer",
   "lib/emulator",
   "lib/tester",
   "lib/differ",
   "lib/releaser",
   "lib/snapshotter",
   "lib/pruner"
]

[profile.release]
opt-level = 'z'
panic = "abort"
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
strip = true
