[package]
name = "builder"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
glob = "0.3.1"
log = "0.4"
tracing = "0.1"
anyhow = "1.0.71"
base64 = "0.21.0"
itertools = "0.10.5"
aws-sdk-ecr = { version = "1.82.0", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-codeartifact = { version = "1.74.0", features = ["behavior-version-latest"] }
kit = { path = "../kit" }
composer = { path = "../composer" }
authorizer = { path = "../authorizer" }
