[package]
name = "compiler"
version = "0.0.3"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
ptree = "0.4.0"
walkdir = "2"
serde_yaml = "0.9.25"
toml = "0.8.8"
regex = "1.9.1"
semver = "0.7.0"
tabled = "0.10.0"
kit = { path = "../kit" }
configurator = { path = "../configurator" }