[package]
name = "compiler"
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
walkdir = "2"
anyhow = "1.0.71"
tabled = "0.10.0"
serde_yaml = "0.9.25"
derivative = "2.2.0"
toml = "0.8.8"
rustyline = "17.0.0"
nom = "7.1.3"
rand = { version = "^0.8.4"}
lazy_static = "1.4"
serde_with = "3.14.0"
tracing = "0.1"
kit = { path = "../kit" }
