[package]
name = "composer"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
ptree = "0.4.0"
walkdir = "2"
serde_yaml = "0.9.25"
toml = "0.8.8"
regex = "1.9.1"
semver = "0.7.0"
tabled = "0.10.0"
tracing = "0.1"
bincode = "1.2.1"
nom = "7.1.3"
rand = { version = "^0.8.4"}
derivative = "2.2.0"
lazy_static = "1.4"
chksum = "0.4.0"
kit = { git = "https://github.com/tc-functors/kit.git", rev = "60f6b7b"}
daggy = { version = "0.8.1", features = ["serde-1"] }
anyhow = "1.0.71"
serde_with = "3.14.0"