[package]
name = "composer"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
ptree = "0.4.0"
serde_yaml = "0.9.25"
toml = "0.8.8"
regex = "1.9.1"
semver = "0.7.0"
tabled = "0.10.0"
tracing = "0.1"
rand = { version = "^0.8.4"}
derivative = "2.2.0"
lazy_static = "1.4"
daggy = { version = "0.8.1", features = ["serde-1"] }
layout-rs = "0.1.2"
anyhow = "1.0.71"
serde_with = "3.14.0"
open = "5.0.0"
safe_unwrap = "0.4.1"
kit = { path = "../kit" }
configurator = { path = "../configurator" }
compiler = { path = "../compiler" }