[package]
name = "deployer"
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
log = "0.4"
anyhow = "1.0.71"
itertools = "0.10.5"
tabled = "0.10.0"
tracing = "0.1"
question = "0.2.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kit = { path = "../kit" }
provider = { path = "../provider" }
compiler = { path = "../compiler" }
composer = { path = "../composer" }
builder = { path = "../builder" }
configurator = { path = "../configurator" }
