[package]
name = "differ"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.9.1"
tracing = "0.1"
cacache = "13.0.0"
tabled = "0.10.0"
kit = { path = "../kit" }
composer = { path = "../composer" }
tagger = { path = "../tagger" }
