[package]
name = "emulator"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
anyhow = "1.0.71"
base64 = "0.21.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-ecr = { version = "1.82.0", features = ["behavior-version-latest"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
authorizer = { path = "../authorizer" }
composer = { path = "../composer" }
kit = { path = "../kit" }
