[package]
name = "emulator"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
anyhow = "1.0.71"
base64 = "0.21.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
provider = { path = "../provider" }
composer = { path = "../composer" }
compiler = { path = "../compiler" }
configurator = { path = "../configurator" }
kit = { path = "../kit" }
