[package]
name = "grokker"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
log = "0.4"
tabled = "0.10.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kit = { path = "../kit" }
provider = { path = "../provider" }
compiler = { path = "../compiler" }
resolver = { path = "../resolver" }
