[package]
name = "inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_derive = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["limit", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.*"}
compiler = { path = "../compiler" }
cache = { path = "../cache" }
memory-serve = "1.0.1"