[package]
name = "inspector"
version.workspace = true
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.25"
serde_derive = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["limit", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.*"}
cacache = "13.0.0"
compiler = { path = "../compiler" }
aws = { path = "../aws" }
kit = { path = "../kit" }
lister = { path = "../lister" }
tagger = { path = "../tagger" }
configurator = { path = "../configurator" }
doku = "0.21.1"