[package]
name = "invoker"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
open = "5.0.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.69.0", features = ["behavior-version-latest"] }
base64 = "0.21.0"
anyhow = "1.0.71"
kit = { path = "../kit" }
authorizer = { path = "../authorizer" }
compiler = { path = "../compiler" }
