[package]
name = "invoker"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
open = "5.0.0"
rustyline = "17.0.0"
colored = "2.0.0"
s3uri = "1.0.0-beta.9"
gql_client = "1.0.8"
tracing = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-apigatewayv2 = { version = "1.66.0", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.69.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.70.0", features = ["behavior-version-latest"] }
base64 = "0.21.0"
anyhow = "1.0.71"
kit = { path = "../kit" }
authorizer = { path = "../authorizer" }
composer = { path = "../composer" }
