[package]
name = "invoker"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
open = "5.0.0"
rustyline = "17.0.0"
colored = "2.0.0"
gql_client = "1.0.8"
tracing = "0.1"
kit = { path = "../kit" }
provider = { path = "../provider" }
composer = { path = "../composer" }
compiler = { path = "../compiler" }
configurator = { path = "../configurator" }
