[package]
name = "provider"
version.workspace = true
edition = "2024"

[dependencies]
tracing = "0.1"
walkdir = "2"
base64 = "0.21.0"
colored = "2.0.0"
anyhow = "1.0.71"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1.1.2"
aws-sdk-apigatewayv2 = { version = "1.66.0", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1.68.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.69.0", features = ["behavior-version-latest"] }
aws-sdk-appsync = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.75.0", features = ["behavior-version-latest"] }
aws-sdk-efs = { version = "1.67.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.65.0", features = ["behavior-version-latest"] }
aws-sdk-ssm = { version = "1.72.0", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = { version = "1.79.0", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = { version = "1.79.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-resourcegroupstagging = { version = "1.73.0", features = ["behavior-version-latest"] }
aws-sdk-scheduler = { version = "1.65.0", features = ["behavior-version-latest"] }
aws-sdk-ecr = { version = "1.82.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.66.0", features = ["behavior-version-latest"] }
aws-sdk-codeartifact = { version = "1.74.0", features = ["behavior-version-latest"] }
s3uri = "1.0.0-beta.9"
kit = { path = "../kit" }
