[package]
name = "pruner"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
open = "5.0.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-resourcegroupstagging = { version = "1.73.0", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-iam = { version = "1.68.0", features = ["behavior-version-latest"] }
aws-sdk-appsync = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-apigatewayv2 = { version = "1.66.0", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = { version = "1.76.0", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.75.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.65.0", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.69.0", features = ["behavior-version-latest"] }
yes-or-no = "0.1"
kit = { path = "../kit" }
authorizer = { path = "../authorizer" }
compiler = { path = "../compiler" }
