[package]
name = "publisher"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
log = "0.4"
tabled = "0.10.0"
base64 = "0.21.0"
anyhow = "1.0.71"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = { version = "1.76.0", features = ["behavior-version-latest"] }
kit = { path = "../kit" }
authorizer = { path = "../authorizer" }
compiler = { path = "../compiler" }
