[package]
name = "releaser"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.9.1"
semver = "0.7.0"
self-replace = "1.3.5"
open = "5.0.0"
kit = { path = "../kit" }
aws = { path = "../aws" }
configurator = { path = "../configurator" }
