[package]
name = "releaser"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.9.1"
semver = "0.7.0"
self-replace = "1.3.5"
colored = "2.0.0"
open = "5.0.0"
anyhow = "1.0.71"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.72.0", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.69.0", features = ["behavior-version-latest"] }
kit = { path = "../kit" }
authorizer = { path = "../authorizer" }
composer = { path = "../composer" }
