[package]
name = "router"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
anyhow = "1.0.71"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-eventbridge = { version = "1.70.0", features = ["behavior-version-latest"] }
aws-sdk-sfn = { version = "1.69.0", features = ["behavior-version-latest"] }
kit = { path = "../kit" }
composer = { path = "../composer" }
authorizer = { path = "../authorizer" }
