[package]
name = "scaffolder"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9.25"
question = "0.2.2"
inquire = "0.7.5"
kit = { git = "https://github.com/tc-functors/kit.git", rev = "c56968d"}
composer = { path = "../composer" }
