[package]
name = "scaffolder"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9.25"
question = "0.2.2"
inquire = "0.7.5"
base64 = "0.21.0"
llm-toolkit = "0.21.0"
kit = { path = "../kit" }
compiler = { path = "../compiler" }
composer = { path = "../composer" }
visualizer = { path = "../visualizer" }

# AWS SDK dependencies for Bedrock integration
aws-config = "1.5"
aws-sdk-bedrockruntime = "1.50"
async-trait = "0.1"

# Configuration dependencies
dotenv = "0.15"
toml = "0.8"

# HTTP client (for Anthropic provider)
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
proptest = "1.4"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
