[package]
name = "tester"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
assert-json-diff  = "2.0.2"
jsonpath-rust = "1.0.4"
colored = "2.0.0"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kit = { path = "../kit" }
composer = { path = "../composer" }
invoker = { path = "../invoker" }
provider = { path = "../provider" }
