[package]
name = "visualizer"
version.workspace = true
edition = "2024"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
layout-rs = "0.1.2"
open = "5.0.0"
maud = "*"
rand = "0.9.2"
kit = { path = "../kit" }
compiler = { path = "../compiler" }
composer = { path = "../composer" }
