[project]
name = "python-inline"
version = "0.1.0"
description = ""

requires-python = "~=3.12.0"

dependencies = [
    "boto3>=1.34.0",
    "aws-lambda-powertools>=2.25.0",
    "honeybadger>=0.15.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "uv>=0.1.0",
    "coverage>=7.3.2",
    "python-dotenv>=1.0.0",
    "types-pyyaml>=6.0.12.20260510",
]

[tool.uv.build-backend]
module-name = []
module-root = ""

[build-system]
requires = ["uv_build>=0.11.30,<0.12"]
build-backend = "uv_build"